syntax = "proto3";

package steam;
option go_package = "github.com/savageking-io/ogbsteam/proto";

import "google/protobuf/timestamp.proto";

service SteamService {
  rpc AuthUserTicket(UserTicket) returns (AuthUserTicketResponse);
  rpc Ping(PingMessage) returns (PingMessage);
}

message PingMessage {
  google.protobuf.Timestamp SentAt = 1;
  google.protobuf.Timestamp RepliedAt = 2;
}

message UserTicket {
  string ticket = 1;
}

message AuthUserTicketResponse {
  string Result = 1;
  string SteamId = 2;
  string OwnerSteamId = 3;
  bool IsVacBanned = 4;
  bool IsPublisherBanned = 5;
}